--- a/index.html
+++ b/index.html
@@ -189,14 +189,14 @@
 
       @media (max-width: 900px) {
         .banner-links a {
-          font-size: 11px;
+          font-size: 8px;
           color: rgb(113, 120, 103);
           text-decoration: underline;
           white-space: nowrap;
         }
 
         .banner-links {
-          gap: 12px;
+          gap: 6px;
         }
 
         .banner-title img {
@@ -242,6 +242,10 @@
         .questions_container {
           width: 100%;
         }
+
+        .question_button {
+        font-size: 12px;
+      }
       }
     </style>
   </head>
