try to fix mobile response again with max and min

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
       }
     }
 
-    /* @media (max-width: 900px) {
+    @media (min-width: 510px) and (max-width: 900px) {
         .banner-links a {
           font-size: 11px;
           color: rgb(113, 120, 103);
@@ -304,7 +304,7 @@
           width: 100%;
         }
         
-      } */
+      }
 
     </style>
   </head>
