try to fix mobile response again with disabling hover

--- a/index.html
+++ b/index.html
@@ -246,6 +246,11 @@
         .question_button {
         font-size: 12px;
       }
+
+      .question_button:hover {
+            background-color: transparent;
+        }
+
     }
 
     @media (min-width: 510px) and (max-width: 900px) {
