fixed question font size

--- a/index.html
+++ b/index.html
@@ -308,6 +308,10 @@
         .questions_container {
           width: 100%;
         }
+
+        .question_button {
+        font-size: 15px;
+      }
         
       }
 
