removed redundant images from folder

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
       </div>
       <img
         class="flower_banner"
-        src="flower_banner_two.jpg"
+        src="flower_banner.jpg"
         alt="bouqet of flowers"
       />
     </div>
