fixed hover effect

--- a/index.html
+++ b/index.html
@@ -312,6 +312,10 @@
         .question_button {
         font-size: 15px;
       }
+
+      .question_button:hover {
+        background-color: #d6ffb0;
+      }
         
       }
 
@@ -368,7 +372,7 @@
           </button>
           <div class="question_answer">
             <p>We deliver to:</p>
-            <ol>
+            <ul>
               <li>Boston</li>
               <li>Medford</li>
               <li>Cambrige</li>
@@ -381,7 +385,7 @@
               <li>Everett</li>
               <li>Arlington</li>
               <li>Belmont</li>
-            </ol>
+            </ul>
             <p>
               If you are unsure if we deliver to your area, please contact us!
             </p>
