--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
         border-top: 1px solid #000000;
         height: 75px;
         position: relative;
+        color: rgb(46, 151, 255)
       }
 
       .current_question_button {
@@ -233,7 +234,7 @@
           display: flex;
           justify-content: center;
           align-items: center;
-          font-size: 17px;
+          font-size: 14px;
           text-align: center;
           margin-left: auto;
           margin: auto;
