fixed question/answer fonts

--- a/index.html
+++ b/index.html
@@ -252,6 +252,10 @@
             background-color: transparent;
         }
 
+        .question_answer {
+        font-size: 10px;
+      }
+
     }
 
     @media (min-width: 510px) and (max-width: 900px) {
@@ -317,6 +321,11 @@
       .question_button:hover {
         background-color: #d6ffb0;
       }
+
+      .question_answer {
+        font-size: 13px;
+      }
+
         
       }
 
