--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
       <div class="intro-text">
         <h1>Frequently Asked Questions</h1>
         <p>
-          At Borcelle Floral Studios, we believe that beauty and nature should
+          At Borcelle Floral Studio, we believe that beauty and nature should
           always be in harmony. That's why we offer fresh, handpicked flowers
           that not only brighten your space but also bring the soothing essence
           of nature indoors. Our arrangements are crafted with care, using
