fixed banner margins

--- a/index.html
+++ b/index.html
@@ -206,12 +206,19 @@
         }
 
         .right {
-          margin: 0;
+          margin-left: 0px;
+          margin-right: 5px;
+          margin-top: 0px;
+          margin-bottom: 0px;
         }
 
         .left {
-          margin: 0;
-        }
+          margin-left: 5px;
+          margin-right: 0px;
+          margin-top: 0px;
+          margin-bottom: 0px;       
+         }
+
 
         .banner-links a:hover {
           border-radius: 2px;
@@ -275,12 +282,18 @@
         }
 
         .right {
-          margin: 0;
+          margin-left: 0px;
+          margin-right: 7px;
+          margin-top: 0px;
+          margin-bottom: 0px;
         }
 
         .left {
-          margin: 0;
-        }
+          margin-left: 7px;
+          margin-right: 0px;
+          margin-top: 0px;
+          margin-bottom: 0px;       
+         }
 
         .banner-links a:hover {
           border-radius: 2px;
