--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     />
     <meta charset="utf-8" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.js"
+      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+      crossorigin="anonymous"
+    ></script>
     <style type="text/css">
       body,
       html {
@@ -56,12 +60,12 @@
         font-size: 1em;
         color: rgb(113, 120, 103);
         text-decoration: underline;
+        padding: 10px;
       }
 
       .banner-links a:hover {
         border-radius: 5px;
         background-color: rgb(233, 60, 118);
-        padding: 10px;
         color: white;
       }
 
@@ -194,6 +198,7 @@
           color: rgb(113, 120, 103);
           text-decoration: underline;
           white-space: nowrap;
+          padding: 0px;
         }
 
         .banner-links {
@@ -216,14 +221,12 @@
           margin-left: 5px;
           margin-right: 0px;
           margin-top: 0px;
-          margin-bottom: 0px;       
-         }
-
+          margin-bottom: 0px;
+        }
 
         .banner-links a:hover {
           border-radius: 2px;
           background-color: rgb(233, 60, 118);
-          padding: 1px;
           color: white;
         }
 
@@ -270,6 +273,7 @@
           color: rgb(113, 120, 103);
           text-decoration: underline;
           white-space: nowrap;
+          padding: 0px;
         }
 
         .banner-links {
@@ -292,13 +296,13 @@
           margin-left: 7px;
           margin-right: 0px;
           margin-top: 0px;
-          margin-bottom: 0px;       
-         }
+          margin-bottom: 0px;
+        }
 
         .banner-links a:hover {
           border-radius: 2px;
           background-color: rgb(233, 60, 118);
-          padding: 1px;
+          padding: 0px;
           color: white;
         }
 
@@ -345,14 +349,14 @@
       <div class="banner-links left">
         <a href="#">About Us</a>
         <a href="#">Contact Us</a>
-        <a class="contact-link" href="#">Events Page</a>
+        <a class="contact-link" href="#">Events</a>
       </div>
       <a class="banner-title" href="./index.html">
         <img src="./logo.png" alt="Store Logo" />
       </a>
 
       <div class="banner-links right">
-        <a href="#">Order Form</a>
+        <a href="#">Order Now</a>
         <a href="#">FAQ</a>
         <a class="contact-link" href="#">Testimonials</a>
       </div>
