--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
       @media (max-width: 768px) {
         .banner-links a {
-          font-size: 11px;
+          font-size: 8px;
           color: #f7f4ed;
           white-space: nowrap;
           padding: 0px;
@@ -428,6 +428,7 @@
         button#getEstimate {
           padding: 5px 8px;
           font-size: 12px;
+          margin: 0;
         }
 
         input#userAddress {
