--- a/index.html
+++ b/index.html
@@ -435,6 +435,7 @@
           width: 45%;
           font-size: 12px;
           margin-top: 5px;
+          margin-right: 0px;
         }
 
         #storeLocationSelector {
