--- a/index.html
+++ b/index.html
@@ -428,7 +428,10 @@
         button#getEstimate {
           padding: 3px 3px;
           font-size: 12px;
-          margin: 0;
+          margin-top: 0px;
+          margin-right: 0px;
+          margin-bottom: 0px;
+          margin-left: 3px;
         }
 
         input#userAddress {
