--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
       @media (max-width: 768px) {
         .banner-links a {
-          font-size: 8px;
+          font-size: 11px;
           color: #f7f4ed;
           white-space: nowrap;
           padding: 0px;
@@ -340,20 +340,24 @@
         }
 
         button#getEstimate {
-          padding: 3px 8px;
+          padding: 3px 3px;
           font-size: 10px;
-          margin-left: 15px;
+          margin-top: 0px;
+          margin-right: 0px;
+          margin-bottom: 0px;
+          margin-left: 10px;
         }
 
         input#userAddress {
-          width: 45%;
-          font-size: 12px;
+          width: 30%;
+          font-size: 10px;
           margin-top: 5px;
+          margin-right: 0px;
         }
 
         #storeLocationSelector {
           padding: 0;
-          font-size: 10px;
+          font-size: 12px;
           margin: 0;
         }
       }
@@ -431,7 +435,7 @@
           margin-top: 0px;
           margin-right: 0px;
           margin-bottom: 0px;
-          margin-left: 10px;
+          margin-left: 15px;
         }
 
         input#userAddress {
