--- a/index.html
+++ b/index.html
@@ -340,16 +340,13 @@
         }
 
         button#getEstimate {
-          padding: 3px 3px;
+          padding: 5px 5px;
           font-size: 10px;
-          margin-top: 0px;
-          margin-right: 0px;
-          margin-bottom: 0px;
-          margin-left: 10px;
+          margin: 0px;
         }
 
         input#userAddress {
-          width: 30%;
+          width: 20%;
           font-size: 10px;
           margin-top: 5px;
           margin-right: 0px;
@@ -357,8 +354,12 @@
 
         #storeLocationSelector {
           padding: 0;
-          font-size: 12px;
+          font-size: 10px;
           margin: 0;
+        }
+
+        #storeLocal {
+          font-size: 8px;
         }
       }
 
@@ -569,7 +570,7 @@
             <i class="fas fa-angle-down"></i>
           </button>
           <div class="question_answer">
-            <label>Choose a store location:</label>
+            <label id="storeLocal">Choose a store location:</label>
             <select id="storeLocationSelector">
               <option value="42.36628064018915,-71.06780678241522">
                 Boston
