--- a/index.html
+++ b/index.html
@@ -355,7 +355,10 @@
         #storeLocationSelector {
           padding: 0;
           font-size: 10px;
-          margin: 0;
+          margin-left: 3px;
+          margin-right: 0px;
+          margin-top: 0px;
+          margin-bottom: 0px;
         }
 
         #storeLocal {
