--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
         }
       }
 
-      @media (min-width: 500px) and (max-width: 900px) {
+      @media (min-width: 490px) and (max-width: 900px) {
         .banner-links a {
           font-size: 11px;
           color: #f7f4ed;
@@ -453,6 +453,100 @@
           padding: 0;
           font-size: 15px;
           margin: 0;
+        }
+      }
+
+      @media (max-width: 489px) {
+        .banner-links a {
+          font-size: 9px;
+          color: #f7f4ed;
+          white-space: nowrap;
+          padding: 0px;
+        }
+
+        .banner-links {
+          gap: 6px;
+        }
+
+        .banner-title img {
+          width: 100px;
+          height: auto;
+        }
+
+        .right {
+          margin-left: 0px;
+          margin-right: 5px;
+          margin-top: 0px;
+          margin-bottom: 0px;
+        }
+
+        .left {
+          margin-left: 5px;
+          margin-right: 0px;
+          margin-top: 0px;
+          margin-bottom: 0px;
+        }
+
+        .intro {
+          flex-direction: column;
+          align-items: start;
+          height: 60%;
+        }
+
+        .flower_banner {
+          display: none;
+        }
+
+        .intro-text {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-size: 14px;
+          text-align: center;
+          margin-left: auto;
+          margin: auto;
+        }
+
+        .questions_container {
+          width: 100%;
+        }
+
+        .question_button {
+          font-size: 12px;
+        }
+
+        .question_button:hover {
+          background-color: transparent;
+        }
+
+        .question_answer {
+          font-size: 14px;
+        }
+
+        button#getEstimate {
+          padding: 5px 5px;
+          font-size: 10px;
+          margin: 0px;
+        }
+
+        input#userAddress {
+          width: 50%;
+          font-size: 10px;
+          margin-top: 5px;
+          margin-right: 0px;
+        }
+
+        #storeLocationSelector {
+          padding: 0;
+          font-size: 10px;
+          margin-left: 3px;
+          margin-right: 0px;
+          margin-top: 0px;
+          margin-bottom: 0px;
+        }
+
+        #storeLocal {
+          font-size: 10px;
         }
       }
     </style>
